Bug 399258. nsCSSRendering::PaintBorder should not try to optimize away the case where the dirty rectangle is inside the element's padding-rect, because border-radius can make the border appear inside the padding-rect. nsDisplayBorder::OptimizeVisibility does this optimization correctly already so just remove it from PaintBorder. r+sr=vlad, a=damon